# COOMM

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
comm/: __init__.py  _rendering_tool.py  _rod_tool.py  callback_func.py
comm/actuations/: __init__.py  actuation.py
comm/algorithms/: __init__.py  algorithm.py  forward_backward.py  forward_backward_muscle.py
comm/forces/: __init__.py  drag_force.py
comm/frames/: frame.py  frame_tools.py  muscle_frame.py  rigidbody_frame.py  rod_frame.py
comm/objects/: cylinder.py  director_constraint.py  object.py  point.py  target.py
comm/povray/: __init__.py  cylinder.py  povray_base.py  povray_camera.py  rod.py  sphere.py
coomm/: __init__.py  _rendering_tool.py  _rod_tool.py  callback_func.py  version.py
coomm/actuations/: actuation.py
coomm/algorithms/: algorithm.py  forward_backward.py  forward_backward_muscle.py
coomm/forces/: drag_force.py
coomm/frames/: __init__.py  frame.py  muscle_frame.py  rigidbody_frame.py  rod_frame.py
coomm/objects/: __init__.py  cylinder.py  director_constraint.py  object.py  point.py  target.py
coomm/povray/: cylinder.py  draw_sucker.py  povray_base.py  povray_frame.py  rod.py  sphere.py
docs/: README.md  conf.py  index.rst  requirements.txt
docs/api/: .actuation.rst.swp  actuation.rst  algorithms.rst  forces.rst  frames.rst  objects.rst
docs/guide/: tutorials.rst
examples/: set_arm_environment.py
examples/journal_grasp/: export_povray_files.py  plot_frames.py  plot_muscles.py  run_simulation.py  set_environment.py  static_solution.py
(+28 files in other folders)
