[tool.poetry]
name = "coomm"
version = "0.1.1"
description = "Control Oriented Muscle Model for an octopus arm."
authors = ["hanson-hschang <hschang2@illinois.edu>", "Seung Hyun Kim <skim449@illinois.edu>"]
license = "MIT"
readme = "README.md"

classifiers = [
# Trove classifiers
# Full list: https://pypi.python.org/pypi?%3Aaction=list_classifiers
"License :: OSI Approved :: MIT License",
"Development Status :: 4 - Beta",
"Programming Language :: Python",
"Programming Language :: Python :: 3.8",
"Programming Language :: Python :: 3.9",
"Programming Language :: Python :: 3.10",
"Intended Audience :: Science/Research",
"Intended Audience :: Education",
]

[tool.poetry.dependencies]
python = "^3.10,<3.11"
numba = "^0.55.0"
numpy = "^1.19.2"
pyelastica = "^0.3.1.post1"
matplotlib = "^3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
